2001-04-20  Gary Houston  <ghouston@arglist.com>

	* socket.c (scm_fill_sockaddr): call htons for sin6_port.
	Don't assign sin6_scope_id in structure unless HAVE_SIN6_SCOPE_ID
	is defined.
	(scm_addr_vector): use a switch instead of multiple if statements.
	Add support for IPv6 (incomplete) .
	MAX_ADDR_SIZE: increase to size of struct sockaddr_in if needed.

2001-04-20  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* struct.c (scm_free_structs):  Only pairs may be accessed with
	SCM_C[AD]R.

2001-04-19  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* unif.h (SCM_ARRAY_CONTIGUOUS): Reintroduced as deprecated.

	* __scm.h (SCM_WTA_DISPATCH_0, SCM_WTA_DISPATCH_1,
	SCM_WTA_DISPATCH_2, SCM_WTA_DISPATCH_n): Inserted required
	parentheses in order to get the correct associativity.

2001-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* unif.c (scm_array_to_list):  Added missing handling of arrays of
	bytes.  Thanks to Masao Uebayashi for the bug report.

2001-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* debug.c (scm_procedure_source):  Use SCM_CLOSURE_FORMALS more
	consistently.

2001-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* procs.h (SCM_CLOSURE_FORMALS):  New macro.

	* debug.c (scm_procedure_source), eval.c (scm_badformalsp,
	SCM_CEVAL, SCM_APPLY), goops.c (get_slot_value, set_slot_value),
	procprop.c (scm_i_procedure_arity), sort.c (closureless):  Use 
	SCM_CLOSURE_FORMALS.

	* eval.c (scm_badformalsp, SCM_CEVAL), procprop.c
	(scm_i_procedure_arity):  Prefer stronger predicates like
	SCM_NULLP or SCM_FALSEP over SCM_IMP.

	* macros.c (macro_print):  Extracted macro printing code from
	print.c and simplified it.

	(scm_macro_type):  Use SCM_MACRO_TYPE;

	(scm_init_macros):  Use macro_print for printing macros.

	* print.c (scm_print_opts):  Improved option documentation.

	(scm_iprin1):  Extracted printing of macros to macros.c.
	Simplified printing of ordinary closures.

	* procs.c (scm_thunk_p):  Fixed handling of closures.  Thanks to